# Robot_Simulation

./: .gitattributes  .gitignore  Agent_Session_Notes.md  CMakeLists.txt  ReadMe.md  Styles.css  dsctl.ps1  project_history.md
Design/: Curivatorlayout.json  Curivatorlayout_all.json  Entity2D_test_layout.xml  Modular_Design.ppt  SmartLayout_Swerve1.xml  SmartLayout_SwerveV3.xml  Swervelayout.json  Swervelayout_legacy.json
Source/Application/: ReadMe_Application.md
Source/Application/DriverStation/: DriverStation.sln
Source/Application/DriverStation/DriverStation/: DriverStation.aps  DriverStation.cpp  DriverStation.rc  DriverStation.vcxproj  DriverStation.vcxproj.filters  Keyboard.cpp  Keyboard.h  MjpegServer.cpp  MjpegServer.h  NT4ClientTest.cpp  NT4Server.cpp  NT4Server.h  NativeLink.cpp  NativeLink.h  NativeLinkAuthorityHelpers.cpp  NativeLinkAuthorityHelpers.h  NativeLinkSharedMemory.cpp  NativeLinkSharedMemory.h  NativeLinkTcp.cpp  NativeLinkTcp.h  Robot_Tester.cpp  Robot_Tester.h  SimCameraSource.cpp  SimCameraSource.h  Transport.cpp  Transport.h  TransportSmoke.cpp  TronGridSource.cpp  TronGridSource.h  WebCameraSource.cpp  WebCameraSource.h  resource.h  stdafx.h
Source/Application/DriverStation_Installer/: DriverStation_Installer.sln  DriverStation_Installer.vdproj  ReadMe.md
Source/Application/OutputViewer/: OutputViewer.sln
Source/Application/OutputViewer/OutputViewer/: OutputViewer.cpp  OutputViewer.vcxproj  OutputViewer.vcxproj.filters
Source/Application/RobotAssembly/: RobotAssembly.sln
Source/Application/RobotAssembly/RobotAssembly/: RobotAssembly.cpp  RobotAssembly.vcxproj  RobotAssembly.vcxproj.filters  RobotAssembly_static.vcxproj  RobotAssembly_static.vcxproj.filters  TeleAutonV1.cpp  TeleAutonV1.h  TeleAutonV2.cpp  TeleAutonV2.h  TeleOpV1.cpp  TeleOpV1.h  TeleOpV2.cpp  TeleOpV2.h  TeleOpV3.cpp  TeleOpV3.h
Source/Base/: AssetManager.h  Base_Includes.h  Event.h  EventMap.cpp  EventMap.h  Goal.h  LUA.cpp  LUA.h  Misc.cpp  Misc.h  PIDController.h  Physics.h  Poly.h  Script.cpp  Script.h  Time_Type.cpp  Time_Type.h  Vec2d.h
Source/Libraries/SmartDashboard/: ErrorBase.h  SmartDashboard.ppt  SmartDashboard.sln  SmartDashboard.vcxproj  SmartDashboard.vcxproj.filters  SmartDashboard_Client.ppt  SmartDashboard_Import.h  semLib.h  stdafx.h  stdint.h
Source/Libraries/SmartDashboard/OSAL/: Synchronized.cpp  Synchronized.h  System.cpp  Task.cpp  Task.h
Source/Libraries/SmartDashboard/SmartDashboard/: NamedSendable.h  ReadMe.txt  SendableChooser.cpp  SmartDashboard.cpp  SmartDashboard.h  stdafx.cpp  stdafx.h
Source/Libraries/SmartDashboard/networktables2/: AbstractNetworkTableEntryStore.cpp  AbstractNetworkTableEntryStore.h  NetworkTableEntry.cpp  NetworkTableEntry.h  NetworkTableNode.cpp  WriteManager.cpp
Source/Libraries/SmartDashboard/networktables2/client/: ClientNetworkTableEntryStore.cpp
Source/Libraries/SmartDashboard/networktables2/connection/: DataIOStream.cpp  NetworkTableConnection.cpp
Source/Libraries/SmartDashboard/networktables2/server/: NetworkTableServer.cpp  ServerConnectionAdapter.cpp  ServerIncomingStreamMonitor.cpp  ServerNetworkTableEntryStore.cpp
Source/Libraries/SmartDashboard/networktables2/stream/: FDIOStream.cpp  SocketServerStreamProvider.cpp  SocketStreamFactory.cpp
Source/Libraries/SmartDashboard/networktables2/thread/: DefaultThreadManager.cpp  DefaultThreadManager.h
Source/Libraries/SmartDashboard/networktables2/util/: IOException.cpp
Source/Libraries/SmartDashboard/tables/: ITable.h
Source/Modules/Input/: JoystickConverter.h  ReadMe_Input.md
Source/Modules/Input/AI_Input/: AI_BaseController_goals.h  AI_Input.cpp  AI_Input.h  AI_Input.sln  AI_Input.vcxproj  AI_Input.vcxproj.filters  AI_Input_Example.cpp  AI_Input_Example.h  AI_Input_Tester.cpp  AutonChooser.h  AutonSelection.h  DirectAutonChainLog.h  Goal_Types.h  SmartDashboard_HelperFunctions.h  StdAfx.h
Source/Modules/Input/dx_Joystick_Controller/: dx_Joystick_Controller.sln
Source/Modules/Input/dx_Joystick_Controller/dx_Joystick_Controller/: dx_Joystick.cpp  dx_Joystick.h  dx_Joystick_Controller.cpp  dx_Joystick_Controller.vcxproj  dx_Joystick_Controller.vcxproj.filters  stdafx.h
Source/Modules/Output/: ReadMe_Output.md  SmartDashboard_PID_Monitor.h
Source/Modules/Output/OSG_Viewer/: OSG_Viewer.sln
Source/Modules/Output/OSG_Viewer/OSG_ViewTester/: OSG_ViewTester.cpp  OSG_ViewTester.vcxproj  OSG_ViewTester.vcxproj.filters  stdafx.h
Source/Modules/Output/OSG_Viewer/OSG_Viewer/: Entity_UI.h  ImportExports.h  Keyboard_State.h  ManipulatorArm_UI.h  ManipulatorUI_Plugin.h  OSG_Viewer.cpp  OSG_Viewer.h  OSG_Viewer.vcxproj  OSG_Viewer.vcxproj.filters  OSG_Viewer_Tester.cpp  SwerveRobot_UI.h  TextFontData.cpp  stdafx.h
Source/Modules/Robot/: ReadMe_Robot.md
Source/Modules/Robot/DriveKinematics/: DriveKinematics.sln
Source/Modules/Robot/DriveKinematics/DriveKinematics/: DriveKinematics.cpp  DriveKinematics.vcxproj  DriveKinematics.vcxproj.filters  Vehicle_Drive.cpp  Vehicle_Drive.h
Source/Modules/Robot/Entity1D/: Entity1D.sln
Source/Modules/Robot/Entity2D/: Entity2D.sln
Source/Modules/Robot/MotionControl2D_physics/: MotionControl2D_physics.sln
Source/Modules/Robot/MotionControl2D_simple/: MotionControl2D.sln
Source/Modules/Robot/SwerveRobot/: ReadMe_SwerveRobot.md  SwerveRobot.sln
Source/Properties/: RegistryV1.h  script_loader.h  script_loader_example.cpp
docs/: CurivatorManipulator.md  overview.md  project_history.md  roadmap.md  testing.md  transport_modes_strategy.md
docs/journal/: 2026-03-17-direct-debugging-journey.md  2026-03-22-remote-debug-crash-investigation.md  2026-03-22-session-handoff.md  2026-04-03-autoactivate-ping-pong-fix.md
docs/learning/: debugging_workflow.md
overlay-ports/ixwebsocket/: echo-subprotocol.patch  portfile.cmake  vcpkg.json
plugins/NativeLinkTransport/include/: native_link_ipc_protocol.h
tests/: auton_selection_tests.cpp  drivekinematics_tests.cpp  entity1d_tests.cpp  entity2d_tests.cpp  excavator_arm_tests.cpp  native_link_core_tests.cpp  robot_unit_tests.cpp
(+40 files in other folders)
